# TinyGuard

./: .gitignore  README.md  devlog.md
firmware/esp32cam/: camera_server.cpp  camera_server.h  esp32cam.ino  heartbeat_service.cpp  heartbeat_service.h  telemetry_collector.cpp  telemetry_collector.h  wifi_manager.cpp  wifi_manager.h
firmware/monitor/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/monitor/main/: CMakeLists.txt  alert_manager.c  alert_manager.h  anomaly_engine.c  anomaly_engine.h  behavior_profile.c  behavior_profile.h  correlation_tracker.c  correlation_tracker.h  dashboard_server.c  dashboard_server.h  device_state.c  device_state.h  fingerprint_engine.c  fingerprint_engine.h  main.c  session_tracker.c  session_tracker.h  stats_engine.c  stats_engine.h  udp_receiver.c  udp_receiver.h  wifi_manager.c  wifi_manager.h
scripts/: validate.py
